--- a/app/src/main/res/layout/wait_for_server.xml
+++ b/app/src/main/res/layout/wait_for_server.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,10 +10,8 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="110dp"
         android:layout_height="127dp"
-        app:layout_constraintBottom_toTopOf="@+id/tvwaiting_for_server"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="105dp" />
 
     <TextView
         android:id="@+id/tvwaiting_for_server"
@@ -22,8 +19,6 @@
         android:layout_height="wrap_content"
         android:text="Waiting for Server Response"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</LinearLayout>
+        tools:layout_editor_absoluteX="55dp"
+        tools:layout_editor_absoluteY="299dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
